--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -982,8 +982,8 @@
                         [disabled]="BillMaster.ID === null && !f2.valid" (click)="update()">Update</button>
                     <button type="button" class="  me-md-3 me-0" mat-raised-button color="primary"
                         [disabled]="BillMaster.ID === null" (click)="openModal1(content1)">Payment</button>
-                    <button type="button" class="  me-md-3 me-0" mat-raised-button color="primary"
-                        [disabled]="BillMaster.ID === null" (click)="openModal5(content5)">Reward</button>
+                    <!-- <button type="button" class="  me-md-3 me-0" mat-raised-button color="primary"
+                        [disabled]="BillMaster.ID === null" (click)="openModal5(content5)">Reward</button> -->
                     <button  type="button" class="  me-md-3 me-0" mat-raised-button color="primary"
                         [disabled]="BillMaster.ID === null" (click)="openModal12(content12)">Lens Order</button>
                     <button type="button" class="  me-md-3 me-0" mat-raised-button color="primary"
