--- a/server/views/header.ejs
+++ b/server/views/header.ejs
@@ -1,63 +1,48 @@
 <html>
-<link rel="stylesheet" href="http://localhost:3000/assest/header.css">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="<%=data.companysetting.FontApi%>" rel="stylesheet">
-<style>
-   
-    html body {
-        zoom: 80%;
-    }
-</style>
-
+<head>
+    <link rel="stylesheet" href="http://localhost:3000/assest/header.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="<%= data.companysetting.FontApi %>" rel="stylesheet">
+    <style>
+        html body {
+            zoom: 80%;
+        }
+    </style>
+</head>
 <body>
+    <% if (data.billformate.BillHeader == 3) { %>
+        <header class="headerSize" <% %> style="width: <%= data.HeaderWidth %>; height: <%= data.HeaderHeight %>;">
+            <div class="row">
+                <div class="col1" <% %> style="text-align: <%= data.ImageAlign %>;">
+                    <img src="<%= data.LogoURL %>" alt="LOGO" <% %> style="width: <%= data.ImageWidth %>; height: <%= data.ImageHeight %>;">
+                </div>
+                <div class="col2">
+                    <span <% %> style="font-size: <%= data.ShopNameFont %>; font-weight: <%= data.ShopNameBold %>; color: <%= data.Color %>; font-family: '<%= data.companysetting.FontsStyle %>';">
+                        <%= data.shopdetails.Name %>
+                    </span><br>
+                    <span <% %> style="line-height: <%= data.LineSpace %>; font-size: <%= data.ShopDetailFont %>;">
+                        <%= data.shopdetails.Address %><br>
 
-    <% if (data.billformate.BillHeader==3){%>
-        <header class="headerSize" <% %> style='width:<%= data.HeaderWidth %>; height: <%= data.HeaderHeight %>;'>
-            <!-- <div class="row" style="text-align: left;">
-                <% if (data.mode === "Receipt"){%>
-                    <p style="font-size: 15px; margin: 0; padding: 0;"> <%=data.shopdetails.GSTNo%></p>
-                    <%}%>
-            </div> -->
-                    <div class="row">
-                        <div class="col1" <% %> style="text-align: <%= data.ImageAlign %>;">
-                                <img src=<%=data.LogoURL%> alt="LOGO" style='width:<%= data.ImageWidth %>; height:
-                                    <%= data.ImageHeight %>;'>
-                        </div>
-                        <div class="col2">
-                            <span <% %> style="font-size:<%= data.ShopNameFont %>; font-weight: <%= data.ShopNameBold %>
-                                        ; color: <%= data.Color %>; font-family:'<%=data.companysetting.FontsStyle%>'  ">
-                                            <%=data.shopdetails.Name%>
-                            </span> <br>
-                            <span <% %> style='line-height:<%= data.LineSpace %>;font-size:<%= data.ShopDetailFont %>;'>
-                                        <span>
-                                            <%=data.shopdetails.Address%>
-                                        </span> <br>
-                                        <span>
-                                            <%=data.shopdetails.MobileNo1%>
-                                                <% if (data.shopdetails.MobileNo2){%>
-                                                    ,
-                                                    <%}%>
-                                                        <%=(data.shopdetails.MobileNo2 !=='null' ) ?
-                                                            data.shopdetails.MobileNo2 : '' %>
-                                        </span><br>
-                                        <span>
-                                            <%=data.shopdetails.Email%>
-                                        </span><br>
-                                        <span>
-                                            <%=data.shopdetails.GSTNo%>
-                                        </span><br>
-                                        <% if (data.mode === "Receipt"){%>
-                                        <span>
-                                            <%=(data.shopdetails.PhoneNo !=='null' ) ? data.shopdetails.PhoneNo : '' %>
-                                        </span>
-                                        <%}%>
-                            </span>
-                        </div>
-                    </div>
+                        <%= data.shopdetails.MobileNo1 %>
+                        <% if (data.shopdetails.MobileNo2 && data.shopdetails.MobileNo2 !== 'null') { %>
+                            , <%= data.shopdetails.MobileNo2 %>
+                        <% } %>
+                        <% if (data.shopdetails.PhoneNo && data.shopdetails.PhoneNo !== 'null') { %>
+                            , <%= data.shopdetails.PhoneNo %>
+                        <% } %><br>
+
+                        <%= data.shopdetails.Email %><br>
+
+                        <% if (data.mode === "Receipt") { %>
+                            <%= data.shopdetails.GSTNo %>
+                        <% } %>
+                    </span>
+                </div>
+            </div>
         </header>
-        <%}%>
-
+    <% } %>
 </body>
-
 </html>
+
+
