--- a/web1/src/app/inventory/transfer-product-invoice/transfer-product-invoice.component.html
+++ b/web1/src/app/inventory/transfer-product-invoice/transfer-product-invoice.component.html
@@ -17,6 +17,9 @@
                                         <input matInput name="SearchBarCode" [(ngModel)]="Req.SearchBarCode"
                                             (blur)="getProductDataByBarCodeNo()" required #SearchBarCodecontrol
                                             [autocomplete]="false" appAutoFoucsDirectives>
+                                            <mat-error>
+                                                Search BarCode is required
+                                            </mat-error>
                                     </mat-form-field>
                                 </div>
                                 <div class="col-xl-2 col-lg-2 col-md-3 col-12 mb-0">
@@ -181,7 +184,7 @@
                                 <div class="col-xl-4 col-lg-4 col-md-4 col-12 mb-0">
                                     <button class="me-3" mat-raised-button color="primary"
                                         [disabled]="xferItem.TransferCount == 0 || xferItem.TransferCount == null" >Intiate Transfer</button>
-                                        <button type="button" mat-raised-button color="warn" >Reset</button>
+                                       
                                 </div>
                                
                             </div>
@@ -240,7 +243,7 @@
                             </div>
 
                              <div class="row">
-                                <div class="col-2">
+                                <div class="col-1">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Quantity</mat-label>
                                         <input matInput name="Quantityt" [(ngModel)]="xferMaster.Quantity"
